fixing spacing

--- a/shehacks_project/css/styles.css
+++ b/shehacks_project/css/styles.css
@@ -398,7 +398,7 @@ position: absolute;
 width: 570px;
 height: 38px;
 left: 540px;
-top: 240px;
+top: 245px;
 
 font-family: 'DM Sans';
 font-style: normal;
@@ -427,7 +427,7 @@ gap: 40px;
 
 position: absolute;
 left: 435px;
-top: 320px;
+top: 340px;
 
 }
 
@@ -442,7 +442,7 @@ gap: 40px;
 
 position: absolute;
 left: 435px;
-top: 610px;
+top: 630px;
 
 }
 
@@ -487,7 +487,7 @@ position: absolute;
 width: 570px;
 height: 38px;
 left: 540px;
-top: 240px;
+top: 245px;
 
 font-family: 'DM Sans';
 font-style: normal;
@@ -515,7 +515,7 @@ gap: 40px;
 
 position: absolute;
 left: 285px;
-top: 320px;
+top: 340px;
 
 }
 
@@ -530,7 +530,7 @@ gap: 40px;
 
 position: absolute;
 left: 285px;
-top: 610px;
+top: 630px;
 
 }
 
